use clazz.getConstructor().newInstance()